# tma-template

./: .env.example  .gitignore  .gitlab-ci.yml  .pr_agent.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.api  Dockerfile.bot  LICENSE  README  README.md  RUFF_SETUP.md  alembic.ini  bot-load-test.py  config-example.yaml  config-local.yaml  config-test.yaml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint-api.sh  justfile  pyproject.toml
.claude/: settings.local.json
.claude/commands/: analyze_tests.md  commit.md  commit_and_pr.md  fix-issue.md  review_file.md  review_pr.md
.claude/rules/: architecture.md  patterns.md  testing.md
.github/: README.md  pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  pr-agent.yml  pr-validation.yml
docker/: Dockerfile  Dockerfile.api  Dockerfile.bot  entrypoint-alembic.sh  entrypoint-api.sh  entrypoint-bot.sh
docs/plans/: 2026-01-24-user-timestamp-fields-design.md  2026-01-24-user-timestamp-fields.md  2026-01-26-ddd-clean-architecture-audit.md  2026-01-26-docker-setup-design.md  2026-01-30-fluent-i18n-design.md  2026-01-30-fluent-i18n.md  2026-01-30-referral-system-design.md  2026-01-30-referral-system-implementation.md  2026-01-30-referral-system-updates.md  2026-02-25-claude-md-restructuring-design.md
locales/en/: admin.ftl  common.ftl  settings.ftl  start.ftl  stats.ftl
locales/ru/: admin.ftl  common.ftl  settings.ftl  start.ftl  stats.ftl
scripts/: generate_i18n_stubs.py  generate_tg_init_data.py
src/application/admin/: __init__.py  check_alive.py
src/application/auth/: exceptions.py  tg.py
src/application/common/: exceptions.py
src/application/interfaces/: auth.py
src/application/referral/: get_info.py  process.py  stats.py
src/application/user/: create.py  dto.py  dtos.py  exceptions.py  get_me.py  service.py
src/application/user/interactors/: __init__.py  update_language.py
src/domain/admin/: repository.py
src/domain/common/vo/: base.py  integer.py  string.py
src/domain/question/: entity.py  vo.py
src/domain/user/: __init__.py  entity.py  repository.py  vo.py
src/domain/user/services/: referral.py
src/infrastructure/: auth.py  config.py  sentry.py
src/infrastructure/db/: factory.py  holder.py  transaction.py
src/infrastructure/db/mappers/: __init__.py  user.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 2026_01_24_1059-80231256407c_add_user_timestamps.py  2026_01_30_1200-7e29d6909fea_add_referral_fields.py  2026_02_03_2248-e0b5590257d6_add_language_code.py  c6ae99a6b811_user.py
src/infrastructure/db/models/: user.py
src/infrastructure/db/models/types/: user.py
src/infrastructure/db/repos/: __init__.py  admin.py  base.py  user.py
src/infrastructure/di/: __init__.py  auth.py  db.py
src/infrastructure/di/interactors/: __init__.py  admin.py  auth.py  referral.py  user.py
src/infrastructure/i18n/: __init__.py  hub.py  middleware.py  provider.py  stubs.pyi  types.py
src/presentation/api/: app.py  exception.py  providers.py  security.py  utils.py
src/presentation/api/auth/: __init__.py  router.py  schemas.py
src/presentation/api/base/: schemas.py
src/presentation/api/dependencies/: auth.py
src/presentation/api/health/: __init__.py  router.py  schemas.py
src/presentation/api/middleware/: auth.py
src/presentation/api/user/: router.py  schemas.py
src/presentation/bot/: main.py
src/presentation/bot/filters/: __init__.py  admin.py
src/presentation/bot/middleware/: user_and_locale.py
src/presentation/bot/routers/: __init__.py  commands.py  echo.py  onboarding.py  referral.py  settings.py
src/presentation/bot/routers/admin/: __init__.py  check_alive.py  example.py  stats.py
src/presentation/bot/utils/: __init__.py  cb_data.py  helpers.py  i18n.py  inaccessible_message.py
src/presentation/bot/utils/markups/: __init__.py  admin.py  settings.py
src/presentation/load_test/: README.md  __main__.py  cli.py  factories.py  metrics.py  report.py  runner.py  session.py
src/presentation/load_test/handlers/: __init__.py  callback_language.py  registry.py  start.py
tests/: conftest.py
tests/domain/user/: test_vo.py
tests/infrastructure/: test_auth.py  test_config.py
tests/integration/: conftest.py
tests/integration/api/: test_auth.py  test_health.py  test_openapi.py  test_user.py
tests/unit/application/auth/: test_tg.py
tests/unit/application/referral/: test_get_info.py  test_process.py  test_stats.py
tests/unit/application/user/: test_create.py  test_get_me.py
tests/unit/application/user/interactors/: test_update_language.py
tests/unit/domain/user/: test_vo.py
tests/unit/domain/user/services/: test_referral.py
tests/unit/infrastructure/: test_auth.py  test_config.py  test_sentry.py
tests/unit/infrastructure/i18n/: test_hub.py  test_provider.py
tests/unit/presentation/api/: test_security.py
tests/unit/presentation/bot/routers/: test_commands.py
tests/unit/presentation/bot/routers/admin/: test_example.py
tests/unit/presentation/bot/utils/: test_i18n.py
tests/utils/model_factories/: base.py  user.py
