[project]
name = "ask-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "factory-boy>=3.3.3",
    "greenlet>=3.2.3",
    "litestar>=2.16.0",
    "pydantic>=2.11.7",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "python-jose~=3.4.0",
    "pyyaml>=6.0.2",
    "ruff>=0.12.5",
    "sqlalchemy>=2.0.41",
    "ty>=0.0.1a16",
    "uvicorn>=0.35.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
