[project]
name = "ask-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "factory-boy>=3.3.3",
    "fluent-compiler>=0.4.0",
    "fluentogram>=0.4.0",
    "greenlet>=3.2.3",
    "litestar>=2.16.0",
    "pydantic>=2.11.7",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.5.0",
    "python-jose~=3.4.0",
    "pyyaml>=6.0.2",
    "pre-commit>=4.0.1",
    "ruff>=0.12.5",
    "sqlalchemy>=2.0.41",
    "ty>=0.0.1a16",
    "uvicorn>=0.35.0",
    "pytest-timeout>=2.4.0",
    "pytest-sugar>=1.1.1",
    "pytest-randomly>=3.16.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope ="session"
# Parallel execution available with: pytest -n auto --dist worksteal
addopts = [
    # Output / display
    "-ra",              # show extra test summary info (skipped/xfail/etc.)
    "-q",               # less verbose output (combine with -vv for detail where needed)
    "-vv",              # more detailed test logs (esp. useful with -s)
    "-s",               # disable output capturing (so print() works)
    "--color=yes",      # always force colored output

    # Safety / speed
    "--maxfail=1",      # stop after first failure
    "-n", "auto",       # run tests in parallel using all CPUs
    "--dist=worksteal", # better balancing across workers

    # Coverage
    "--cov=src",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",

    "--disable-warnings",  # suppress pytest warning spam (still logged)
    "--tb=short",          # shorter tracebacks (can switch to 'line' or 'auto')

    "--randomly-seed=42",  # pytest-randomly
    "--timeout=30",        # pytest-timeout
    "--strict-markers"
]

[tool.ruff]
# Python version compatibility
target-version = "py313"

# Line length configuration
line-length = 88
indent-width = 4

# Enable specific rule sets for comprehensive code quality
lint.select = [
    # Pyflakes
    "F",     # Pyflakes rules for logical errors
    
    # pycodestyle
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    
    # isort
    "I",     # Import sorting and organization
    
    # pep8-naming
    "N",     # PEP 8 naming conventions
    
    # pyupgrade
    "UP",    # Modern Python syntax upgrades
    
    # flake8-bugbear
    "B",     # Common bugs and design problems
    
    # flake8-simplify
    "SIM",   # Code simplification suggestions
    
    # flake8-comprehensions
    "C4",    # List/dict/set comprehension improvements
    
    # bandit (security)
    "S",     # Security vulnerability detection
    
    # flake8-annotations
    "ANN",   # Type annotation enforcement
    
    # flake8-async
    "ASYNC", # Async/await usage best practices
    
    # flake8-logging-format
    "G",     # Logging format and best practices
    
    # Pylint
    "PL",    # Pylint rules for code quality
    
    # Ruff-specific rules
    "RUF",   # Ruff-specific improvements
]

# Ignore specific rules that might be too strict for this project
lint.ignore = [
    # Line length (handled by formatter)
    "E501",    # Line too long
    
    # Type annotation rules (gradually implement)
    "ANN204",  # Missing return type annotation for special method
    
    # Security rules for development/testing
    "S101",    # Use of `assert` detected (common in tests)
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    
    # Pylint rules that might be too aggressive
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    
    # Documentation rules (can be enabled later)
    "D",       # pydocstyle rules
]

# Per-file ignores for specific patterns
[tool.ruff.lint.per-file-ignores]
# Test files
"tests/*" = ["S101", "S105", "S106", "ANN", "PLR2004", "SIM117"]
# Migration files
"**/migrations/*" = ["ANN", "N806"]
# Configuration files
"**/config/*" = ["S105", "S106"]
# Init files
"__init__.py" = ["F401"]

# Configure import sorting
[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

# Formatter configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Additional linting configuration
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.pylint]
max-locals = 15
max-branches = 12
max-statements = 50

[tool.coverage.run]
omit = [
    "src/presentation/bot/main.py",
]
